--- a/08_Events/index.html
+++ b/08_Events/index.html
@@ -24,6 +24,22 @@
             <div onclick="boxClick(event)" class="box"></div>
             <div onclick="boxClick(event)" class="box"></div>
         </div>
+
+        <div class="boxContainer">
+            <div onmouseenter="enterBox(event)" onmouseleave="leaveBox(event)" class="boxHover"></div>
+            <div onmouseenter="enterBox(event)" onmouseleave="leaveBox(event)" class="boxHover"></div>
+            <div onmouseenter="enterBox(event)" onmouseleave="leaveBox(event)" class="boxHover"></div>
+            <div onmouseenter="enterBox(event)" onmouseleave="leaveBox(event)" class="boxHover"></div>
+            <div onmouseenter="enterBox(event)" onmouseleave="leaveBox(event)" class="boxHover"></div>
+            <div onmouseenter="enterBox(event)" onmouseleave="leaveBox(event)" class="boxHover"></div>
+        </div>
+
+
+        <div style="display: flex; justify-content: center; margin: 50px 0px;">
+            <div class="superBox">
+
+            </div>
+        </div>
         <script src="script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     </body>
