random color final

--- a/08_Events/index.html
+++ b/08_Events/index.html
@@ -36,7 +36,7 @@
 
 
         <div style="display: flex; justify-content: center; margin: 50px 0px;">
-            <div class="superBox">
+            <div id="superBox" class="superBox">
 
             </div>
         </div>
