--- a/08_Events/index.html
+++ b/08_Events/index.html
@@ -11,6 +11,10 @@
         <title>Events</title>
     </head>
     <body>
+        <div style="width: 30px; height: 30px;" id="circle" class="circle">
+
+        </div>
+
         <div class="text-center mt-5">
             <button onclick="btnHtmlClick()" class="mx-2 btn btn-primary">html event</button>
             <button id="btnObject" class="mx-2 btn btn-secondary">object event</button>
