--- a/09_DOM_BOM/index.html
+++ b/09_DOM_BOM/index.html
@@ -13,9 +13,9 @@
 <body>
     <div style="text-align: center;">
         <label>Квадрат</label>
-        <input id="square" type="radio" value="sqrt" name="Type" class="mx-1" checked>
+        <input id="square" type="radio" name="boxType" class="mx-1" checked>
         <label>Коло</label>
-        <input id="circle" type="radio" value="crcl" name="Type" class="mx-1">
+        <input id="circle" type="radio" name="boxType" class="mx-1">
         <button onclick="createBoxHandle()" class="btn btn-primary m-5">Create box</button>
         <input id="boxColor" type="color">
     </div>
