set, get, delete cookie

--- a/11_cookie/index.html
+++ b/11_cookie/index.html
@@ -7,8 +7,16 @@
 </head>
 <body>
 
-    <button onclick="setCookie()">
+    <button onclick="setCookieHandle()">
         Set cookie
+    </button>
+
+    <button onclick="getCookieHandle()">
+        Get cookie
+    </button>
+
+    <button onclick="deleteCookieHandle()">
+        Delete cookie
     </button>
     
     <script src="scripts.js"></script>
