--- a/13_destructuring_spread/index.html
+++ b/13_destructuring_spread/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destr spread</title>
-</head>
-<body>
-    <input value="John" type="text" name="firstName" id="name">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css">
+        <title>Destr spread</title>
+    </head>
+    <body>
+        <!-- <input value="John" type="text" name="firstName" id="name" />
 
-    <script src="scripts.js"></script>
-</body>
+        <h1 style="text-align: center" id="title"></h1>
+        <button onclick="clickHandle()">Hello</button>
+        <button id="stopBtn">Stop</button>
+        <button onclick="generateHandle()">Generate list</button>
+
+        <ul id="list"></ul>
+
+        <h1 id="counter" style="text-align: center; font-size: 6em">0</h1>
+        <div style="text-align: center">
+            <button onclick="startCounterHandle()">Start</button>
+            <button id="pauseCounterBtn">Pause</button>
+            <button onclick="stopCounterHandle()">Stop</button>
+        </div> -->
+
+
+        <div style="height: 100vh;">
+            <div id="box" style="top: 0px; left: 0px; width: 50px; height: 50px;" class="box"></div>
+        </div>
+
+        <div style="position: absolute; top: 50%; left: 50%;">
+            <button onclick="startBoxMove()">Start</button>
+            <button id="stopBoxMove">Stop</button>
+        </div>
+
+        <script src="scripts.js"></script>
+    </body>
 </html>
