--- a/14_api/index.html
+++ b/14_api/index.html
@@ -91,8 +91,13 @@
         <!-- Content -->
 
         <div class="container mt-4">
-            <div class="row row-gap-4" id="row">
-            </div>
+            <div class="row row-gap-4" id="row"></div>
+        </div>
+
+        <div class="m-3 d-flex justify-content-center">
+            <ul class="pagination" id="pagination">
+                
+            </ul>
         </div>
 
         <script src="script.js"></script>
