--- a/14_api/index.html
+++ b/14_api/index.html
@@ -69,6 +69,9 @@
                                 >
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="userCity"></a>
+                        </li>
                     </ul>
                     <form class="d-flex" onsubmit="searchHandle(event)">
                         <input
